[package]
name = "js-polars"
version = "0.0.1"
authors = ["Ritchie Vink"]
documentation = "https://pola-rs.github.io/polars-book/"
edition = "2018"
homepage = "https://github.com/pola-rs/polars"
license = "MIT"
repository = "https://github.com/pola-rs/polars"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
wasm-bindgen = "0.2.34"
js-sys = "0.3.56"
wee_alloc = { version = "0.4.5" }

[dependencies.polars-lazy]
path = "../polars/polars-lazy"
features = ["private"]

[dependencies.polars-core]
path = "../polars/polars-core"
default-features = false
features = [
    "strings",
    "temporal",
    "performant",
    "private",
    "dtype-i8",
    "dtype-i16",
    "dtype-u8",
    "dtype-u16",
    "abs",
    "diff",
    "round_series",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[workspace]
